[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/base-nodes/menu-panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/speedrun-screens/rules.gd" type="Script" id=2]
[ext_resource path="res://ui/base-nodes/button-model.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/speedrun-screens/speedrun-menu.gd" type="Script" id=4]
[ext_resource path="res://ui/base-nodes/return-shortcut.tres" type="ShortCut" id=5]
[ext_resource path="res://ui/speedrun-screens/start.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/press-start-2p.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/speedrun-screens/speedrun-times.gd" type="Script" id=8]
[ext_resource path="res://ui/base-nodes/checkbox.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="SpeedrunMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
speedrun_start = ExtResource( 6 )
return_shortcut = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 326.0
margin_top = 173.0
margin_right = 698.0
margin_bottom = 403.0

[node name="MenuPanel" parent="CenterContainer/MarginContainer" instance=ExtResource( 1 )]
margin_right = 372.0
margin_bottom = 230.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer"]
margin_right = 372.0
margin_bottom = 230.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Menu" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 360.0
margin_bottom = 218.0
custom_constants/separation = 38

[node name="Title" type="Label" parent="CenterContainer/MarginContainer/MarginContainer/Menu"]
margin_right = 348.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "Speedrun"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer/Menu"]
margin_top = 54.0
margin_right = 348.0
margin_bottom = 206.0

[node name="AnyPercent" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options" instance=ExtResource( 3 )]
margin_left = 88.0
margin_right = 260.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Return")
focus_neighbour_bottom = NodePath("../SecretPercent")
text = "Start Any%"

[node name="SecretPercent" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options" instance=ExtResource( 3 )]
margin_left = 64.0
margin_top = 26.0
margin_right = 284.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../AnyPercent")
focus_neighbour_bottom = NodePath("../FasterSidescrollers/CheckBox")
text = "Start Secret%"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options"]
margin_top = 52.0
margin_right = 348.0
margin_bottom = 60.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 8

[node name="FasterSidescrollers" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options" instance=ExtResource( 9 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 348.0
margin_bottom = 88.0

[node name="Label" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options/FasterSidescrollers" index="0"]
margin_right = 320.0
text = "Faster Autoscrollers"

[node name="CheckBox" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options/FasterSidescrollers" index="1"]
margin_left = 324.0
margin_right = 348.0
focus_neighbour_top = NodePath("../../SecretPercent")
focus_neighbour_bottom = NodePath("../../Erase")

[node name="Erase" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options" instance=ExtResource( 3 )]
margin_left = 80.0
margin_top = 92.0
margin_right = 268.0
margin_bottom = 114.0
focus_neighbour_top = NodePath("../FasterSidescrollers/CheckBox")
focus_neighbour_bottom = NodePath("../Return")
text = "Erase Times"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options"]
margin_top = 118.0
margin_right = 348.0
margin_bottom = 126.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 8

[node name="Return" parent="CenterContainer/MarginContainer/MarginContainer/Menu/Options" instance=ExtResource( 3 )]
margin_left = 120.0
margin_top = 130.0
margin_right = 228.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../Erase")
focus_neighbour_bottom = NodePath("../AnyPercent")
shortcut = ExtResource( 5 )
text = "Return"

[node name="Any%Times" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_right = 176.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
category = "times"

[node name="Times" type="VBoxContainer" parent="Any%Times"]
margin_left = 16.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 560.0
size_flags_horizontal = 0
custom_constants/separation = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Any%Times/Times"]
margin_top = 392.0
margin_right = 176.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "Any% Times:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Any%Times/Times"]
margin_top = 416.0
margin_right = 176.0
margin_bottom = 424.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 8

[node name="First" type="Label" parent="Any%Times/Times"]
margin_top = 432.0
margin_right = 176.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Second" type="Label" parent="Any%Times/Times"]
margin_top = 456.0
margin_right = 176.0
margin_bottom = 472.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Third" type="Label" parent="Any%Times/Times"]
margin_top = 480.0
margin_right = 176.0
margin_bottom = 496.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fourth" type="Label" parent="Any%Times/Times"]
margin_top = 504.0
margin_right = 176.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fifth" type="Label" parent="Any%Times/Times"]
margin_top = 528.0
margin_right = 176.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Any%Times/Times"]
wait_time = 0.01
one_shot = true
autostart = true

[node name="Secret%Times" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
category = "secret_times"

[node name="Times" type="VBoxContainer" parent="Secret%Times"]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 560.0
size_flags_horizontal = 0
custom_constants/separation = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Secret%Times/Times"]
margin_top = 392.0
margin_right = 224.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "Secret% Times:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Secret%Times/Times"]
margin_top = 416.0
margin_right = 224.0
margin_bottom = 424.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 8

[node name="First" type="Label" parent="Secret%Times/Times"]
margin_top = 432.0
margin_right = 224.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Second" type="Label" parent="Secret%Times/Times"]
margin_top = 456.0
margin_right = 224.0
margin_bottom = 472.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Third" type="Label" parent="Secret%Times/Times"]
margin_top = 480.0
margin_right = 224.0
margin_bottom = 496.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fourth" type="Label" parent="Secret%Times/Times"]
margin_top = 504.0
margin_right = 224.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fifth" type="Label" parent="Secret%Times/Times"]
margin_top = 528.0
margin_right = 224.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "0:00.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Secret%Times/Times"]
wait_time = 0.01
one_shot = true
autostart = true

[node name="CategoryRules" type="MarginContainer" parent="."]
anchor_right = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
any_percent_rules = "Any%: Get to the end of 17th level by any means."
secret_percent_rules = "Secret%: Activate all the keys and beat the secret level by any means."

[node name="Rules" type="Label" parent="CategoryRules"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/Menu/Options/AnyPercent" to="." method="_on_Any_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/Menu/Options/SecretPercent" to="." method="_on_Secret_pressed"]
[connection signal="toggle" from="CenterContainer/MarginContainer/MarginContainer/Menu/Options/FasterSidescrollers" to="." method="_on_FasterSidescrollers_toggle"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/Menu/Options/Erase" to="." method="_on_Erase_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/Menu/Options/Return" to="." method="_on_Return_pressed"]
[connection signal="timeout" from="Any%Times/Times/Timer" to="Any%Times" method="_on_Timer_timeout"]
[connection signal="timeout" from="Secret%Times/Times/Timer" to="Secret%Times" method="_on_Timer_timeout"]

[editable path="CenterContainer/MarginContainer/MarginContainer/Menu/Options/FasterSidescrollers"]
